@@ -131,9 +131,10 @@ class PdbxLoaderTests(unittest.TestCase):
         for iPath in glob.iglob(os.path.join(modelSourcePath, "*.cif.gz")):
             fn = os.path.basename(iPath)
             uId = fn.split("-")[1]
-            h2 = uId[-2:]
-            h1 = uId[-4:-2]
-            oPath = os.path.join(self.__cachePath, "computed-models", h1, h2, fn)
+            h3 = uId[-2:]
+            h2 = uId[-4:-2]
+            h1 = uId[-6:-4]
+            oPath = os.path.join(self.__cachePath, "computed-models", h1, h2, h3, fn)
             fU.put(iPath, oPath)
 
     @unittest.skipUnless(loadLocal, "Skip local load test")
